# oxpytools

./: .gitmodules  .travis.yml  Makefile  README.rst  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
_modules/: index.html
_modules/oxpytools/: _astropy_init.html  example_mod.html
_sources/: index.txt
_sources/api/: oxpytools.do_primes.txt  oxpytools.main.txt  oxpytools.primes.txt  oxpytools.test.txt
_sources/installation_instructions/: index.txt
api/: oxpytools.do_primes.html  oxpytools.main.html  oxpytools.primes.html  oxpytools.test.html
batch/: wget_to_fits.sh
docs/: conf.py  index.rst
docs/installation_instructions/: index.rst
docs/oxpytools/: index.rst
installation_instructions/: index.html
jason_testbench/: calibration_test.py  calibration_tool.py  chec_time_pipeline.py  chec_viewer.py  generate_pulse_shapes.py  interactive_camera_plotter.py  line_profile.py  matplotlib_live_camera.py  print_pixel_positions.py  read_energy_res  tool_test.ipynb  workshop_karl_hessio.ipynb  write_img_fits
licenses/: LICENSE.rst
oxpytools/: __init__.py  index.html
oxpytools/analysis/: __init__.py
oxpytools/analysis/camera/: __init__.py  chargeresolution.py
oxpytools/io/: files.py  pixels.py  targetio.py
oxpytools/io/tests/: test_files.py  test_pixels.py  test_targetio.py
oxpytools/plotting/: event.py
oxpytools/utils/: datasets.py
scripts/: create_event_gif  obtain_example_camera_image  real_camera_image.py  statistics.py  true_pe_test.py  write_img_fits
(+2 files in other folders)
