[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = oxpytools
description = GCT Python project utilising ctapipe and targetio
long_description = GCT Python project utilising ctapipe and targetio
author = Jason Watson
author_email = jason.watson@physics.ox.ac.uk
license = BSD
url = https://github.com/watsonjj/oxpytools
edit_on_github = True
github_project = watsonjj/oxpytools

[entry_points]
astropy-package-template-example = packagename.example_mod:main

[pep8]
exclude=astropy_helpers,ah_bootstrap.py,ez_setup.py